Completed Functions and getting help tutorial and its exercises

--- a/MahendraBishnoi/01_Python_Micro_Course.ipynb
+++ b/MahendraBishnoi/01_Python_Micro_Course.ipynb
@@ -262,6 +262,375 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. https://www.kaggle.com/colinmorris/functions-and-getting-help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions and Getting Help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting Help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use `help()` function to know what a function does. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function abs in module builtins:\n",
+      "\n",
+      "abs(x, /)\n",
+      "    Return the absolute value of the argument.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function min in module builtins:\n",
+      "\n",
+      "min(...)\n",
+      "    min(iterable, *[, default=obj, key=func]) -> value\n",
+      "    min(arg1, arg2, *args, *[, key=func]) -> value\n",
+      "    \n",
+      "    With a single iterable argument, return its smallest item. The\n",
+      "    default keyword-only argument specifies an object to return if\n",
+      "    the provided iterable is empty.\n",
+      "    With two or more arguments, return the smallest argument.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function max in module builtins:\n",
+      "\n",
+      "max(...)\n",
+      "    max(iterable, *[, default=obj, key=func]) -> value\n",
+      "    max(arg1, arg2, *args, *[, key=func]) -> value\n",
+      "    \n",
+      "    With a single iterable argument, return its biggest item. The\n",
+      "    default keyword-only argument specifies an object to return if\n",
+      "    the provided iterable is empty.\n",
+      "    With two or more arguments, return the largest argument.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(max)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def least_diff(a, b, c):\n",
+    "    diff1 = abs(a - b)\n",
+    "    diff2 = abs(b - c)\n",
+    "    diff3 = abs(c - a)\n",
+    "    return min(diff1, diff2, diff3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we have created a function called `least_diff` which takes three arguments and returns least difference between these three arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    least_diff(1,54,6),\n",
+    "    least_diff(3, 35, 65)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function least_diff in module __main__:\n",
+      "\n",
+      "least_diff(a, b, c)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(least_diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to add docstring to our function which will describe our function\n",
+    "\n",
+    "`help()` shows docstring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def least_diff(a, b, c):\n",
+    "    \"\"\"Return the smallest difference between any two\n",
+    "    numbers among a, b and c\n",
+    "    \n",
+    "    >>> least_diff(3, -5, 8)\n",
+    "    5\n",
+    "    \"\"\"\n",
+    "    diff1 = abs(a - b)\n",
+    "    diff2 = abs(b - c)\n",
+    "    diff3 = abs(c - a)\n",
+    "    return min(diff1, diff2, diff3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function least_diff in module __main__:\n",
+      "\n",
+      "least_diff(a, b, c)\n",
+      "    Return the smallest difference between any two\n",
+      "    numbers among a, b and c\n",
+      "    \n",
+      "    >>> least_diff(3, -5, 8)\n",
+      "    5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(least_diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can create function that don't have return statement in Python.\n",
+    "\n",
+    "These functions return `None`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Default Arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet(name = \"Mahendra\"):\n",
+    "    print(\"Hello,\",name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Mahendra\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Vikash\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet(\"Vikash\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Functions applied to functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mult_by_five(x):\n",
+    "    return 5 * x\n",
+    "\n",
+    "def call(fn, arg):\n",
+    "    \"\"\"call fn on arg\"\"\"\n",
+    "    return fn(arg)\n",
+    "\n",
+    "def squared_call(fn, arg):\n",
+    "    \"\"\"call fn on the result of calling fn on arg\"\"\"\n",
+    "    return fn(fn(arg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    mult_by_five(1),\n",
+    "    call(mult_by_five, 1),\n",
+    "    squared_call(mult_by_five, 1),\n",
+    "    sep = \"\\n\"   # Changing default argument \" \" to newline character \"\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "functions that operate on other functions are called higer order functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Which number is biggest?\n",
+      "21\n",
+      "Which number is biggest modulo 5?\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mod_5(x):\n",
+    "    \"\"\"Returns the remainder of x after division by 5\"\"\"\n",
+    "    return x % 5\n",
+    "\n",
+    "print(\n",
+    "    \"Which number is biggest?\",\n",
+    "    max(16, 17, 21), \n",
+    "    \"Which number is biggest modulo 5?\",\n",
+    "    max(16, 17, 21, key=mod_5),\n",
+    "    sep = \"\\n\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
