Completed Booleans and Conditionals Tutorial and its exercises

--- a/MahendraBishnoi/01_Python_Micro_Course.ipynb
+++ b/MahendraBishnoi/01_Python_Micro_Course.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -628,6 +628,343 @@
     "    max(16, 17, 21, key=mod_5),\n",
     "    sep = \"\\n\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial solved at https://www.kaggle.com/mahendrabishnoi2/exercise-functions-and-getting-help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. https://www.kaggle.com/colinmorris/booleans-and-conditionals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Booleans and Conditionals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Booleans\n",
+    "\n",
+    "can take two values. either `True` or `False`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = True\n",
+    "print(x)\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Boolean operations:\n",
+    "\n",
+    "a == b (a equal to b)\n",
+    "a != b (a not equal to b)\n",
+    "a < b (a less than b)\n",
+    "a > b (a greater than b)\n",
+    "a <= b (a less than or equal to b)\n",
+    "a >= b (a greater than or equal to b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def can_run_for_president(age):\n",
+    "    \"\"\"Can someone of given age run for president in India\"\"\"\n",
+    "    # Indian Constitution requires age of 35 to run for president\n",
+    "    return age >= 35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(can_run_for_president(21))\n",
+    "print(can_run_for_president(41))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Operator precedence https://docs.python.org/3/reference/expressions.html#operator-precedence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conditionals\n",
+    "`if` `elif` `else`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inspect(x):\n",
+    "    if x == 0:\n",
+    "        print(x, \"is zero\")\n",
+    "    elif x < 0:\n",
+    "        print(x, \"is negative\")\n",
+    "    elif x > 0:\n",
+    "        print(x, \"is positive\")\n",
+    "    else:\n",
+    "        print(\"x is unlike anything I've ever seen\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-9 is negative\n",
+      "0 is zero\n",
+      "9 is positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspect(-9)\n",
+    "inspect(0)\n",
+    "inspect(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    if x > 0:\n",
+    "        print(\"only printed when x is positive, x is\", x)\n",
+    "        print(\"Also only printed if x is positive, x is \", x)\n",
+    "    print(\"This is printed regardless of x's value, x is\", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "only printed when x is positive, x is 8\n",
+      "Also only printed if x is positive, x is  8\n",
+      "This is printed regardless of x's value, x is 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "f(8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boolean Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# All numbers are treated as True except 0\n",
+    "print(bool(1))\n",
+    "print(bool(0))\n",
+    "print(bool(9))\n",
+    "print(bool(-7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Empty sequences (strings, list, tuples, dicts etc) are treated as False and rest are True\n",
+    "print(bool(\"abc\"))\n",
+    "print(bool('a'))\n",
+    "print(bool(''))\n",
+    "print(bool([]))\n",
+    "print(bool({}))\n",
+    "print(bool([1,2,3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conditional Expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quiz_message(grade):\n",
+    "    if grade < 50:\n",
+    "        outcome = \"failed\"\n",
+    "    else:\n",
+    "        outcome = \"passed\"\n",
+    "    print(\"You\", outcome, \"the quiz with a grade of\", grade)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You failed the quiz with a grade of 48\n",
+      "You passed the quiz with a grade of 89\n"
+     ]
+    }
+   ],
+   "source": [
+    "quiz_message(48)\n",
+    "quiz_message(89)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above function's `if` `else` part can be written in single line to simplify things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quiz_message(grade):\n",
+    "    outcome = \"failed\" if grade < 50 else \"passed\"\n",
+    "    print(\"You\", outcome, \"the quiz with a grade of\", grade)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You failed the quiz with a grade of 48\n",
+      "You passed the quiz with a grade of 89\n"
+     ]
+    }
+   ],
+   "source": [
+    "quiz_message(48)\n",
+    "quiz_message(89)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's similar to ternary operator in other languages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial solved at https://www.kaggle.com/mahendrabishnoi2/exercise-booleans-and-conditionals"
    ]
   },
   {
