--- a/MahendraBishnoi/01_Python_Micro_Course.ipynb
+++ b/MahendraBishnoi/01_Python_Micro_Course.ipynb
@@ -1960,6 +1960,351 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. https://www.kaggle.com/colinmorris/loops-and-list-comprehensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loops\n",
+    "Loops are a way to repeatedly execute some code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`for` loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mercury Venus Earth Mars Jupiter Saturn Uranus Neptune "
+     ]
+    }
+   ],
+   "source": [
+    "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
+    "for planet in planets:\n",
+    "    print(planet, end = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "317520"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiplicands = (3,5,6,7,7,8,9)\n",
+    "product = 1\n",
+    "for mult in multiplicands:\n",
+    "    product = product * mult\n",
+    "product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO"
+     ]
+    }
+   ],
+   "source": [
+    "# Looping over string\n",
+    "s = 'steganograpHy is the practicE of conceaLing a file, message, image, or video within another fiLe, message, image, Or video.'\n",
+    "msg = ''\n",
+    "\n",
+    "for char in s:\n",
+    "    if char.isupper():\n",
+    "        print(char, end = '')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`range`: Its a function that returns a sequence of numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doing imp work. i = 0\n",
+      "doing imp work. i = 1\n",
+      "doing imp work. i = 2\n",
+      "doing imp work. i = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    print(\"doing imp work. i =\", i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`while` loop <br/>\n",
+    "It iterates until some condition is met"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List Comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With list comprehension\n",
+    "\n",
+    "squares = [n**2 for n in range(1, 10)]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Without list comprehensions\n",
+    "\n",
+    "squares = []\n",
+    "for i in range(1, 10):\n",
+    "    squares.append(i**2)\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also add `if` condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mercury', 'Jupiter', 'Neptune']\n"
+     ]
+    }
+   ],
+   "source": [
+    "short_planets = [planet for planet in planets if len(planet) > 6]\n",
+    "print(short_planets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MERCURY!', 'JUPITER!', 'NEPTUNE!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Applying some transformation\n",
+    "loud_short_planets = [planet.upper() + '!' for planet in planets if len(planet) > 6]\n",
+    "print(loud_short_planets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MERCURY!', 'JUPITER!', 'NEPTUNE!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To improve readability\n",
+    "\n",
+    "loud_short_planets = [\n",
+    "    planet.upper() + '!' \n",
+    "    for planet in planets \n",
+    "    if len(planet) > 6\n",
+    "]\n",
+    "print(loud_short_planets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to write more lines of code when not using list comprehensions\n",
+    "\n",
+    "def count_negatives(nums):\n",
+    "    \"\"\"Return the number of negative numbers in the given list.\n",
+    "    \n",
+    "    >>> count_negatives([5, -1, -2, 0, 3])\n",
+    "    2\n",
+    "    \"\"\"\n",
+    "    n_negative = 0\n",
+    "    for num in nums:\n",
+    "        if num < 0:\n",
+    "            n_negative = n_negative + 1\n",
+    "    return n_negative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#In one line using list comprehension\n",
+    "\n",
+    "def count_negatives(nums):\n",
+    "    return len([num for num in nums if num < 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another way to do in one line using list comprehension and a python trick\n",
+    "\n",
+    "def count_negatives(nums):\n",
+    "    # Reminder: in the \"booleans and conditionals\" exercises, we learned about a quirk of \n",
+    "    # Python where it calculates something like True + True + False + True to be equal to 3.\n",
+    "    return sum([num < 0 for num in nums])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use these tools to make compact readable programs. But when you have to choose, favor code that is easy for others to understand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial solved at https://www.kaggle.com/mahendrabishnoi2/exercise-loops-and-list-comprehensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
