--- a/MahendraBishnoi/04_Pandas.ipynb
+++ b/MahendraBishnoi/04_Pandas.ipynb
@@ -4470,6 +4470,383 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Types and Missing Data\n",
+    "\n",
+    "## Relevant Resources\n",
+    "- [Data Types and Missing Data Reference](https://www.kaggle.com/residentmario/data-types-and-missing-data-reference) - Tutorial\n",
+    "- [Intro to data structures](https://pandas.pydata.org/pandas-docs/stable/dsintro.html)\n",
+    "- [Working with missing data](https://pandas.pydata.org/pandas-docs/stable/missing_data.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "reviews = pd.read_csv(\"../input/wine-reviews/winemag-data-130k-v2.csv\", index_col=0)\n",
+    "pd.set_option('max_rows', 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Types\n",
+    "\n",
+    "The data type for a column in a `DataFrame` or a `Series` is known as the `dtype`.\n",
+    "\n",
+    "We can use the `dtype` property to grab the type of a specific column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.price.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country        object\n",
+       "description    object\n",
+       "                ...  \n",
+       "variety        object\n",
+       "winery         object\n",
+       "Length: 13, dtype: object"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data types of all columns in a DataFrame\n",
+    "reviews.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One peculiarity to keep in mind (and on display very clearly here) is that columns consisting entirely of strings do not get their own type; they are instead given the `object` type.\n",
+    "\n",
+    "It's possible to convert a column of one type into another wherever such a conversion makes sense by using the `astype` function. For example, we may transform the `points` column from its existing `int64` data type into a `float64` data type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         87.0\n",
+       "1         87.0\n",
+       "          ... \n",
+       "129969    90.0\n",
+       "129970    90.0\n",
+       "Name: points, Length: 129971, dtype: float64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.points.astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data type of index of \"Series\" or \"DataFrame\"\n",
+    "reviews.index.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Missing Data\n",
+    "Entries missing values are given the value `NaN`, short for \"Not a Number\". For technical reasons these `NaN` values are always of the `float64` dtype.\n",
+    "\n",
+    "`pandas` provides some methods specific to missing data. To select `NaN` entreis we can use `pd.isnull` (or its companion `pd.notnull`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>description</th>\n",
+       "      <th>designation</th>\n",
+       "      <th>points</th>\n",
+       "      <th>price</th>\n",
+       "      <th>province</th>\n",
+       "      <th>region_1</th>\n",
+       "      <th>region_2</th>\n",
+       "      <th>taster_name</th>\n",
+       "      <th>taster_twitter_handle</th>\n",
+       "      <th>title</th>\n",
+       "      <th>variety</th>\n",
+       "      <th>winery</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>913</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Amber in color, this wine has aromas of peach ...</td>\n",
+       "      <td>Asureti Valley</td>\n",
+       "      <td>87</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mike DeSimone</td>\n",
+       "      <td>@worldwineguys</td>\n",
+       "      <td>Gotsa Family Wines 2014 Asureti Valley Chinuri</td>\n",
+       "      <td>Chinuri</td>\n",
+       "      <td>Gotsa Family Wines</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3131</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Soft, fruity and juicy, this is a pleasant, si...</td>\n",
+       "      <td>Partager</td>\n",
+       "      <td>83</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Roger Voss</td>\n",
+       "      <td>@vossroger</td>\n",
+       "      <td>Barton &amp; Guestier NV Partager Red</td>\n",
+       "      <td>Red Blend</td>\n",
+       "      <td>Barton &amp; Guestier</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129590</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A blend of 60% Syrah, 30% Cabernet Sauvignon a...</td>\n",
+       "      <td>Shah</td>\n",
+       "      <td>90</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mike DeSimone</td>\n",
+       "      <td>@worldwineguys</td>\n",
+       "      <td>Büyülübağ 2012 Shah Red</td>\n",
+       "      <td>Red Blend</td>\n",
+       "      <td>Büyülübağ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129900</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>This wine offers a delightful bouquet of black...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>91</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mike DeSimone</td>\n",
+       "      <td>@worldwineguys</td>\n",
+       "      <td>Psagot 2014 Merlot</td>\n",
+       "      <td>Merlot</td>\n",
+       "      <td>Psagot</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>63 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country         ...                      winery\n",
+       "913        NaN         ...          Gotsa Family Wines\n",
+       "3131       NaN         ...           Barton & Guestier\n",
+       "...        ...         ...                         ...\n",
+       "129590     NaN         ...                   Büyülübağ\n",
+       "129900     NaN         ...                      Psagot\n",
+       "\n",
+       "[63 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews[reviews.country.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Replacing missing values is a common operation.  `pandas` provides a really handy method for this problem: `fillna`. `fillna` provides a few different strategies for mitigating such data. For example, we can simply replace each `NaN` with an `\"Unknown\"`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Unknown\n",
+       "1         Unknown\n",
+       "           ...   \n",
+       "129969    Unknown\n",
+       "129970    Unknown\n",
+       "Name: region_2, Length: 129971, dtype: object"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.region_2.fillna(\"Unknown\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`fillna` supports a few strategies for imputing missing values explained in [the official function documentation](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.fillna.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, we may have a non-null value that we would like to replace. For example, suppose that since this dataset was published, reviewer Kerin O'Keefe has changed her Twitter handle from `@kerinokeefe` to `@kerino`. One way to reflect this in the dataset is using the `replace` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            @kerino\n",
+       "1         @vossroger\n",
+       "             ...    \n",
+       "129969    @vossroger\n",
+       "129970    @vossroger\n",
+       "Name: taster_twitter_handle, Length: 129971, dtype: object"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.taster_twitter_handle.replace('@kerinokeefe', '@kerino')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-data-types-and-missing-values)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
