--- a/MahendraBishnoi/05_Intro_to_ML.ipynb
+++ b/MahendraBishnoi/05_Intro_to_ML.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "[**Machine Learning Micro Course Homepage**](https://www.kaggle.com/learn/intro-to-machine-learning)\n",
     "\n",
+    "[Open this Notebook in Kaggle](https://www.kaggle.com/mahendrabishnoi2/05-intro-to-ml)\n",
+    "\n",
     "---"
    ]
   },
@@ -498,6 +500,387 @@
    "metadata": {},
    "source": [
     "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-explore-your-data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First Machine Learning Model\n",
+    "\n",
+    "## Selecting Data for Modelling\n",
+    "There are a lot of columns in `melbourne_data`. So first we will print all column names and then select a few columns to use for training our first model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Suburb', 'Address', 'Rooms', 'Type', 'Price', 'Method', 'SellerG',\n",
+       "       'Date', 'Distance', 'Postcode', 'Bedroom2', 'Bathroom', 'Car',\n",
+       "       'Landsize', 'BuildingArea', 'YearBuilt', 'CouncilArea', 'Lattitude',\n",
+       "       'Longtitude', 'Regionname', 'Propertycount'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "melbourne_file_path = '../input/melbourne-housing-snapshot/melb_data.csv'\n",
+    "melbourne_data = pd.read_csv(melbourne_file_path) \n",
+    "# show all fields/columns in melbourne_data DataFrame\n",
+    "melbourne_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Melbourne Housing Data has some missing values\n",
+    "# For now we will drop missing values\n",
+    "\n",
+    "melbourne_data = melbourne_data.dropna(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# selecting the prediction target\n",
+    "y = melbourne_data.Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# choosing features\n",
+    "melbourne_features = ['Rooms', 'Bathroom', 'Landsize', 'Lattitude', 'Longtitude']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = melbourne_data[melbourne_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rooms</th>\n",
+       "      <th>Bathroom</th>\n",
+       "      <th>Landsize</th>\n",
+       "      <th>Lattitude</th>\n",
+       "      <th>Longtitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>6196.000000</td>\n",
+       "      <td>6196.000000</td>\n",
+       "      <td>6196.000000</td>\n",
+       "      <td>6196.000000</td>\n",
+       "      <td>6196.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.931407</td>\n",
+       "      <td>1.576340</td>\n",
+       "      <td>471.006940</td>\n",
+       "      <td>-37.807904</td>\n",
+       "      <td>144.990201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.971079</td>\n",
+       "      <td>0.711362</td>\n",
+       "      <td>897.449881</td>\n",
+       "      <td>0.075850</td>\n",
+       "      <td>0.099165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-38.164920</td>\n",
+       "      <td>144.542370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>152.000000</td>\n",
+       "      <td>-37.855438</td>\n",
+       "      <td>144.926198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>373.000000</td>\n",
+       "      <td>-37.802250</td>\n",
+       "      <td>144.995800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>628.000000</td>\n",
+       "      <td>-37.758200</td>\n",
+       "      <td>145.052700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>37000.000000</td>\n",
+       "      <td>-37.457090</td>\n",
+       "      <td>145.526350</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Rooms     Bathroom      Landsize    Lattitude   Longtitude\n",
+       "count  6196.000000  6196.000000   6196.000000  6196.000000  6196.000000\n",
+       "mean      2.931407     1.576340    471.006940   -37.807904   144.990201\n",
+       "std       0.971079     0.711362    897.449881     0.075850     0.099165\n",
+       "min       1.000000     1.000000      0.000000   -38.164920   144.542370\n",
+       "25%       2.000000     1.000000    152.000000   -37.855438   144.926198\n",
+       "50%       3.000000     1.000000    373.000000   -37.802250   144.995800\n",
+       "75%       4.000000     2.000000    628.000000   -37.758200   145.052700\n",
+       "max       8.000000     8.000000  37000.000000   -37.457090   145.526350"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rooms</th>\n",
+       "      <th>Bathroom</th>\n",
+       "      <th>Landsize</th>\n",
+       "      <th>Lattitude</th>\n",
+       "      <th>Longtitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>-37.8079</td>\n",
+       "      <td>144.9934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>-37.8093</td>\n",
+       "      <td>144.9944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>-37.8072</td>\n",
+       "      <td>144.9941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>-37.8024</td>\n",
+       "      <td>144.9993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>-37.8060</td>\n",
+       "      <td>144.9954</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rooms  Bathroom  Landsize  Lattitude  Longtitude\n",
+       "1      2       1.0     156.0   -37.8079    144.9934\n",
+       "2      3       2.0     134.0   -37.8093    144.9944\n",
+       "4      4       1.0     120.0   -37.8072    144.9941\n",
+       "6      3       2.0     245.0   -37.8024    144.9993\n",
+       "7      2       1.0     256.0   -37.8060    144.9954"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=1,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      presort=False, random_state=1, splitter='best')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "# define model, define random_state to reproduce same results\n",
+    "melbourne_model = DecisionTreeRegressor(random_state=1)\n",
+    "\n",
+    "# fit model\n",
+    "melbourne_model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making predictions for the following 5 houses\n",
+      "   Rooms  Bathroom  Landsize  Lattitude  Longtitude\n",
+      "1      2       1.0     156.0   -37.8079    144.9934\n",
+      "2      3       2.0     134.0   -37.8093    144.9944\n",
+      "4      4       1.0     120.0   -37.8072    144.9941\n",
+      "6      3       2.0     245.0   -37.8024    144.9993\n",
+      "7      2       1.0     256.0   -37.8060    144.9954\n",
+      "\n",
+      "The predictions are: \n",
+      "[1035000. 1465000. 1600000. 1876000. 1636000.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Making predictions\n",
+    "\n",
+    "print(\"Making predictions for the following 5 houses\")\n",
+    "print(X.head())\n",
+    "print(\"\\nThe predictions are: \")\n",
+    "print(melbourne_model.predict(X.head()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-your-first-machine-learning-model)"
    ]
   },
   {
