--- a/MahendraBishnoi/05_Intro_to_ML.ipynb
+++ b/MahendraBishnoi/05_Intro_to_ML.ipynb
@@ -499,7 +499,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-explore-your-data)"
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-explore-your-data)\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -880,7 +882,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-your-first-machine-learning-model)"
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-your-first-machine-learning-model)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Validation\n",
+    "Measuring quality of the model.\n",
+    "\n",
+    "First of all create a model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=1,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Data Loading Code Hidden Here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load data\n",
+    "melbourne_file_path = '../input/melbourne-housing-snapshot/melb_data.csv'\n",
+    "melbourne_data = pd.read_csv(melbourne_file_path) \n",
+    "# Filter rows with missing price values\n",
+    "filtered_melbourne_data = melbourne_data.dropna(axis=0)\n",
+    "# Choose target and features\n",
+    "y = filtered_melbourne_data.Price\n",
+    "melbourne_features = ['Rooms', 'Bathroom', 'Landsize', 'BuildingArea', \n",
+    "                        'YearBuilt', 'Lattitude', 'Longtitude']\n",
+    "X = filtered_melbourne_data[melbourne_features]\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "# Define model\n",
+    "melbourne_model = DecisionTreeRegressor()\n",
+    "# Fit model\n",
+    "melbourne_model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now calculate mean absolute error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "434.71594577146544"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "predicted_prices = melbourne_model.predict(X)\n",
+    "mean_absolute_error(y, predicted_prices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "265345.3511943189\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=0)\n",
+    "\n",
+    "# Define Model\n",
+    "melbourne_model = DecisionTreeRegressor(random_state=0)\n",
+    "# Fit Model\n",
+    "melbourne_model.fit(train_X, train_y)\n",
+    "\n",
+    "# Predict on Validation Data\n",
+    "predicted_prices = melbourne_model.predict(val_X)\n",
+    "# Print Mean Absolute Error on Validation Data\n",
+    "print(mean_absolute_error(val_y, predicted_prices))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-model-validation)\n",
+    "\n",
+    "---"
    ]
   },
   {
