--- a/MahendraBishnoi/05_Intro_to_ML.ipynb
+++ b/MahendraBishnoi/05_Intro_to_ML.ipynb
@@ -1015,6 +1015,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Underfitting and Overfitting\n",
+    "\n",
+    "**Overfitting**: When a model matches the training data almost perfectly, but does poorly in validation and other new data. \n",
+    "\n",
+    "**Underfitting**: When a model fails to capture important distinctions and patterns in the data, so it performs poorly even in training data.\n",
+    "\n",
+    "Since we care about accuracy on new data, which we estimate from our validation data, we want to find the sweet spot between underfitting and overfitting. Visually, we want the low point of the (red) validation curve.\n",
+    "<img src=\"http://i.imgur.com/2q85n9s.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we will use \"max_leaf_nodes\" parameter of \"DecisionTreeRegressor\" to set depth of tree\n",
+    "# and compare results of different values of \"max_leaf_nodes\"\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "def get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y):\n",
+    "    model = DecisionTreeRegressor(max_leaf_nodes=max_leaf_nodes, random_state=0)\n",
+    "    model.fit(train_X, train_y)\n",
+    "    preds_val = model.predict(val_X)\n",
+    "    mae = mean_absolute_error(val_y, preds_val)\n",
+    "    return mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "    \n",
+    "# Load data\n",
+    "melbourne_file_path = '../input/melbourne-housing-snapshot/melb_data.csv'\n",
+    "melbourne_data = pd.read_csv(melbourne_file_path) \n",
+    "# Filter rows with missing values\n",
+    "filtered_melbourne_data = melbourne_data.dropna(axis=0)\n",
+    "# Choose target and features\n",
+    "y = filtered_melbourne_data.Price\n",
+    "melbourne_features = ['Rooms', 'Bathroom', 'Landsize', 'BuildingArea', \n",
+    "                        'YearBuilt', 'Lattitude', 'Longtitude']\n",
+    "X = filtered_melbourne_data[melbourne_features]\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# split data into training and validation data, for both features and target\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y,random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max leaf nodes: 5\t\tMean Absolute Error: 347380\n",
+      "Max leaf nodes: 50\t\tMean Absolute Error: 258171\n",
+      "Max leaf nodes: 500\t\tMean Absolute Error: 243496\n",
+      "Max leaf nodes: 5000\t\tMean Absolute Error: 254984\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compare mae with different values of \"max_leaf_nodes\"\n",
+    "\n",
+    "for max_leaf_nodes in [5, 50, 500, 5000]:\n",
+    "    mae = get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y)\n",
+    "    print(f\"Max leaf nodes: {max_leaf_nodes}\\t\\tMean Absolute Error: {mae:.0f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-underfitting-and-overfitting)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
