Random Forest Regression (last) tutorial and exercises of intro to ml completed

--- a/MahendraBishnoi/05_Intro_to_ML.ipynb
+++ b/MahendraBishnoi/05_Intro_to_ML.ipynb
@@ -1101,7 +1101,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-underfitting-and-overfitting)"
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-underfitting-and-overfitting)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forests\n",
+    "The random forest uses many trees, and it makes a prediction by averaging the predictions of each component tree. It generally has much better predictive accuracy than a single decision tree and it works well with default parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "    \n",
+    "# Load data\n",
+    "melbourne_file_path = '../input/melbourne-housing-snapshot/melb_data.csv'\n",
+    "melbourne_data = pd.read_csv(melbourne_file_path) \n",
+    "# Filter rows with missing values\n",
+    "melbourne_data = melbourne_data.dropna(axis=0)\n",
+    "# Choose target and features\n",
+    "y = melbourne_data.Price\n",
+    "melbourne_features = ['Rooms', 'Bathroom', 'Landsize', 'BuildingArea', \n",
+    "                        'YearBuilt', 'Lattitude', 'Longtitude']\n",
+    "X = melbourne_data[melbourne_features]\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# split data into training and validation data, for both features and target\n",
+    "# The split is based on a random number generator. Supplying a numeric value to\n",
+    "# the random_state argument guarantees we get the same split every time we\n",
+    "# run this script.\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y,random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202888\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we will import \"RandomForestRegressor\" class instead of \"DecisionTreeRegressor\"\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "forest_model = RandomForestRegressor(random_state=1)\n",
+    "forest_model.fit(train_X, train_y)\n",
+    "melb_pred = forest_model.predict(val_X)\n",
+    "mae = mean_absolute_error(melb_pred, val_y)\n",
+    "print(f\"{mae:.0f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-random-forests)\n",
+    "\n",
+    "---"
    ]
   },
   {
