Cross Validation tutorial and its exercises completed

--- a/MahendraBishnoi/06_Intermediate_ML.ipynb
+++ b/MahendraBishnoi/06_Intermediate_ML.ipynb
@@ -1528,6 +1528,138 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Cross Validation\n",
+    "In **cross-validation**, we run our modeling process on different subsets of the data to get multiple measures of model quality.\n",
+    "\n",
+    "For example, we could begin by dividing the data into 5 pieces, each 20% of the full dataset. In this case, we say that we have broken the data into 5 \"**folds**\".\n",
+    "<img src=\"https://i.imgur.com/9k60cVA.png\"/>\n",
+    "\n",
+    "Then, we run one experiment for each fold:\n",
+    "\n",
+    "- In **Experiment 1**, we use the first fold as a validation (or holdout) set and everything else as training data. This gives us a measure of model quality based on a 20% holdout set.\n",
+    "- In **Experiment 2**, we hold out data from the second fold (and use everything except the second fold for training the model). The holdout set is then used to get a second estimate of model quality.\n",
+    "- We repeat this process, using every fold once as the holdout set. Putting this together, 100% of the data is used as holdout at some point, and we end up with a measure of model quality that is based on all of the rows in the dataset (even if we don't use all rows simultaneously)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**When to use Cross Validation?**\n",
+    "\n",
+    "Cross-validation gives a more accurate measure of model quality, which is especially important if you are making a lot of modeling decisions. However, it can take longer to run, because it estimates multiple models (one for each fold).\n",
+    "\n",
+    "So, given these tradeoffs, when should you use each approach?\n",
+    "\n",
+    "- For **small datasets**, where extra computational burden isn't a big deal, you should run cross-validation.\n",
+    "- For **larger datasets**, a single validation set is sufficient. Your code will run faster, and you may have enough data that there's little need to re-use some of it for holdout."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('../input/melbourne-housing-snapshot/melb_data.csv')\n",
+    "\n",
+    "cols_to_use = ['Rooms', 'Distance', 'Landsize', 'BuildingArea', 'YearBuilt']\n",
+    "X = data[cols_to_use]\n",
+    "y = data.Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a pipeline that uses imputer to fill missing values and \n",
+    "# random forests model to make predictions\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "my_pipeline = Pipeline(\n",
+    "    steps = [\n",
+    "        ('preprocessor', SimpleImputer()),\n",
+    "        ('model', RandomForestRegressor(n_estimators=50, random_state=0))\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  [301628.7893587  303164.4782723  287298.331666   236061.84754543\n",
+      " 260383.45111427]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use 'cross_val_score' function to obtain cross validation score\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# Multiply by -1 because sklearn calculates negative MAE\n",
+    "scores = -1 * cross_val_score(my_pipeline, X, y,\n",
+    "                             cv=5,\n",
+    "                             scoring=\"neg_mean_absolute_error\")\n",
+    "\n",
+    "print(\"MAE: \", scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to check scorers supported by sklearn\n",
+    "# import sklearn\n",
+    "# sorted(sklearn.metrics.SCORERS.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average MAE:  277707.3795913405\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Average MAE: \", scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-cross-validation)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
