XGBoost tutorial and exercises completed

--- a/MahendraBishnoi/06_Intermediate_ML.ipynb
+++ b/MahendraBishnoi/06_Intermediate_ML.ipynb
@@ -1656,6 +1656,326 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XGBoost\n",
+    "\n",
+    "## Gradient Boosting\n",
+    "**Gradient boosting** is a method that goes through cycles to iteratively add models into an ensemble.\n",
+    "\n",
+    "It begins by initializing the ensemble with a single model, whose predictions can be pretty naive. (Even if its predictions are wildly inaccurate, subsequent additions to the ensemble will address those errors).\n",
+    "\n",
+    "- First, we use the current ensemble to generate predictions for each observation in the dataset. To make a prediction, we add the predictions from all models in the ensemble.\n",
+    "- These predictions are used to calculate a loss function (like mean squared error, for instance).\n",
+    "- Then, we use the loss function to fit a new model that will be added to the ensemble. Specifically, we determine model parameters so that adding this new model to the ensemble will reduce the loss. (Side note: The \"gradient\" in \"gradient boosting\" refers to the fact that we'll use [gradient descent](https://en.wikipedia.org/wiki/Gradient_descent) on the loss function to determine the parameters in this new model.)\n",
+    "- Finally, we add the new model to ensemble, and ...\n",
+    "- ... repeat!\n",
+    "\n",
+    "<img src=\"https://i.imgur.com/MvCGENh.png\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Read the data\n",
+    "data = pd.read_csv('../input/melbourne-housing-snapshot/melb_data.csv')\n",
+    "\n",
+    "# Select subset of predictors\n",
+    "cols_to_use = ['Rooms', 'Distance', 'Landsize', 'BuildingArea', 'YearBuilt']\n",
+    "X = data[cols_to_use]\n",
+    "\n",
+    "# Select target\n",
+    "y = data.Price\n",
+    "\n",
+    "# Separate data into training and validation sets\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[06:56:59] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "             importance_type='gain', learning_rate=0.1, max_delta_step=0,\n",
+       "             max_depth=3, min_child_weight=1, missing=None, n_estimators=100,\n",
+       "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using xgboost library instead of sklearn because this library has\n",
+    "# several additional features focused on speed and performance.\n",
+    "from xgboost import XGBRegressor\n",
+    "\n",
+    "my_model = XGBRegressor()\n",
+    "my_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "264013.8383238218"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate the model by xgboost\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "preds = my_model.predict(X_valid)\n",
+    "mean_absolute_error(y_valid, preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parameter Tuning \n",
+    "- `n_estimators` - specifies how many times to go through the modeling cycle described above. It is equal to the number of models that we include in the ensemble.\n",
+    "    - Too low a value causes underfitting, which leads to inaccurate predictions on both training data and test data.\n",
+    "    - Too high a value causes overfitting, which causes accurate predictions on training data, but inaccurate predictions on test data (which is what we care about).\n",
+    "- Typical values range from 100-1000, though this depends a lot on the `learning_rate` parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[06:57:00] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "             importance_type='gain', learning_rate=0.1, max_delta_step=0,\n",
+       "             max_depth=3, min_child_weight=1, missing=None, n_estimators=500,\n",
+       "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_model = XGBRegressor(n_estimators=500)\n",
+    "my_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `early_stopping_rounds` - offers a way to automatically find the ideal value for `n_estimators`. Early stopping causes the model to stop iterating when the validation score stops improving, even if we aren't at the hard stop for `n_estimators`. It's smart to set a high value for `n_estimators` and then use `early_stopping_rounds` to find the optimal time to stop iterating.\n",
+    "- Since random chance sometimes causes a single round where validation scores don't improve, we need to specify a number for how many rounds of straight deterioration to allow before stopping. Setting `early_stopping_rounds=5` is a reasonable choice. In this case, we stop after 5 straight rounds of deteriorating validation scores.\n",
+    "- When using `early_stopping_rounds`, we also need to set aside some data for calculating the validation scores - this is done by setting the `eval_set` parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[06:57:02] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "             importance_type='gain', learning_rate=0.1, max_delta_step=0,\n",
+       "             max_depth=3, min_child_weight=1, missing=None, n_estimators=500,\n",
+       "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_model = XGBRegressor(n_estimators=500)\n",
+    "my_model.fit(X_train, y_train,\n",
+    "            early_stopping_rounds=5,\n",
+    "            eval_set=[(X_valid, y_valid)],\n",
+    "            verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- learning_rate\n",
+    "\n",
+    "Instead of getting predictions by simply adding up the predictions from each component model, we can multiply the predictions from each model by a small number (known as the learning rate) before adding them in.\n",
+    "\n",
+    "This means each tree we add to the ensemble helps us less. So, we can set a higher value for n_estimators without overfitting. If we use early stopping, the appropriate number of trees will be determined automatically.\n",
+    "\n",
+    "In general, a small learning rate and large number of estimators will yield more accurate XGBoost models, though it will also take the model longer to train since it does more iterations through the cycle. As default, XGBoost sets `learning_rate=0.1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[06:57:03] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "             importance_type='gain', learning_rate=0.5, max_delta_step=0,\n",
+       "             max_depth=3, min_child_weight=1, missing=None, n_estimators=500,\n",
+       "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_model = XGBRegressor(n_estimators=500, learning_rate=0.5)\n",
+    "\n",
+    "my_model.fit(X_train, y_train,\n",
+    "            early_stopping_rounds=5,\n",
+    "            eval_set=[(X_valid, y_valid)],\n",
+    "            verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `n_jobs`\n",
+    "\n",
+    "On larger datasets where runtime is a consideration, we can use parallelism to build your models faster. It's common to set the parameter `n_jobs` equal to the number of cores on our machine. On smaller datasets, this won't help.\n",
+    "\n",
+    "The resulting model won't be any better, so micro-optimizing for fitting time is typically nothing but a distraction. But, it's useful in large datasets where we would otherwise spend a long time waiting during the `fit` command."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[06:57:04] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "             importance_type='gain', learning_rate=0.05, max_delta_step=0,\n",
+       "             max_depth=3, min_child_weight=1, missing=None, n_estimators=1000,\n",
+       "             n_jobs=4, nthread=None, objective='reg:linear', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_model = XGBRegressor(n_estimators=1000, learning_rate=0.05, n_jobs=4)\n",
+    "my_model.fit(X_train, y_train, \n",
+    "             early_stopping_rounds=5, \n",
+    "             eval_set=[(X_valid, y_valid)], \n",
+    "             verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises of this tutorial are solved [here](https://www.kaggle.com/mahendrabishnoi2/exercise-xgboost)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
